@@ -7,6 +7,7 @@
 .DS_Store
 /glide.lock
 /beats.iml
+*.dev.yml
 
 # Editor swap files
 *.swp
